--- a/Citadel-ProjectNew/templates/index.html
+++ b/Citadel-ProjectNew/templates/index.html
@@ -23,6 +23,9 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/about">About Us</a>
+          </li>
         </ul>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -41,7 +44,7 @@
         </div>
         <div class="row">
             <div class="col-12 about" id="center">
-                <h6>Portfolio Pro is a user-friendly portfolio management tool that helps you track and manage your investments effortlessly. Stay informed with real-time data, monitor stock performance, and make data-driven decisions. <br>Join today and take control of your portfolio with confidence.</h6>
+                <h6>Portfolio Pro is a user-friendly portfolio management tool that helps you track and manage your investments effortlessly. Stay informed with real-time data, monitor stock performance, and make data-driven decisions. Join today and take control of your portfolio with confidence.</h6>
             </div>
         </div>
         <div class="row" style="margin-top: 10px;">
@@ -54,13 +57,15 @@
                 </div>
                 <div class="row d-flex justify-content-center">
                     <button button class="btn btn-primary center buttonHome">
-                        <a href="/asset-inputs" style="color: white; text-decoration-line: none;">Add to Portfolio</a>
+                        <a href="/asset-inputs" style="color: white; text-decoration-line: none;">Manage Portfolio</a>
                         </button>
                 </div>
                 <div class="row d-flex justify-content-center">
+                  <a href="/chatbot">
                     <button button class="btn btn-primary center buttonHome">
                         <a href="/chatbot" style="color: white; text-decoration-line: none;">Talk to StockBot</a>
                         </button>
+                  </a>
                 </div>
             </div>
         </div>
