--- a/Citadel-ProjectNew/static/styles.css
+++ b/Citadel-ProjectNew/static/styles.css
@@ -56,7 +56,7 @@ h1 {
 }
 
 h6 {
-    font-size: 0.75rem;
+    font-size: 0.9rem;
     font-weight: 300;
 }
 
@@ -76,4 +76,34 @@ h6 {
     width: 800px;
     height: 400px;
     border-radius: 20px;
+}
+
+.vertical-center {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
+.stockText {
+    color:white; 
+    text-align: left;
+    margin-top: 15px;
+    font-size: 18px;
+}
+
+.stockCol {
+    vertical-align: center;
+}
+
+#button-addon2, #question {
+    border-radius: 10px;
+}
+
+#addEntry, #removeEntry {
+    background-color: #0d6efd;
+    color: white;
+    margin-top: 15px;
+    width: 98%;
 }
