--- a/Citadel-ProjectNew/templates/chatbot.html
+++ b/Citadel-ProjectNew/templates/chatbot.html
@@ -23,6 +23,9 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/about">About Us</a>
+          </li>
         </ul>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -33,7 +36,6 @@
   </nav>
 
   <!--StockBot-->
-  <div class="container">
         <div class="row" style="margin-top: 80px;">
             <div class="col-12">
                 <h1 id="center">StockBot</h1>
@@ -42,28 +44,31 @@
         <div class="row d-flex align-items-center">
             <div class="col-12 chatBase mt-100px" id="center">
                 <!-- StockBot Answer -->
-                <p style="color:white;">
-                  StockBot: {% if stockBot_response %}{{stockBot_response}}{% endif %}
-                </p>
+                <div class="row">
+                  <div class="col-12 stockCol" style="height: 325px;">
+                    <p class="stockText">
+                      <img src="/static/images/stockBot.png" style="width: 50px; height:auto;">
+                      StockBot: {% if stockBot_response %}{{stockBot_response}}{% endif %}
+                    </p>
+                  </div>
+                </div>
 
                 <!-- StockBot Question -->
                     <!-- Form -->
-                        <div class="container">
-                            <form id = 'questionForm' method="POST" action="/chatbot">
-                                <div id="questionEntries">
-                                    <div class="row">
-                                        <div class="col-10">
-                                            <input type="text" class="form-control" id="question" name="question" placeholder="Send a message." aria-label="Send a message.">
-                                        </div>
-                                        <div class="col-2">
-                                            <input id="questionSubmit" type="submit" class="btn btn-primary" style="margin: 0"/>
-                                        </div>
-                                    </div>
-                                </div>
+                          <div class="row d-flex align-items-end">
+                            <form id = 'questionForm' method="POST" action="/chatbot" style="display: inline-block">
+                              <div id="questionEntries">
+                                  <div class="col-12">
+                                    <div class="input-group mb-3">
+                                      <input type="text" class="form-control" id="question" name="question" placeholder="Send a message." aria-label="Send a message.">
+                                      <button class="btn" type="button" id="button-addon2" style="width: 100px;">
+                                        <input id="questionSubmit" type="submit" class="btn btn-primary"/>
+                                      </button>
+                                  </div>
+                              </div>
                             </form>
+                          </div>
                         </div>
-            </div>
-        </div>
         
 
     <!-- Footer -->
@@ -74,7 +79,7 @@
   </div>
 
 
-    </div>
+  </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </body>
 </html>
