--- a/Citadel-ProjectNew/templates/about.html
+++ b/Citadel-ProjectNew/templates/about.html
@@ -26,11 +26,16 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/about">About Us</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/results">View Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/asset-inputs">Manage Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/chatbot">StockBot</a>
+          </li>
         </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-primary" type="submit">Search</button>
-        </form>
       </div>
     </div>
   </nav>
